--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
   }
 
   .container {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-    padding: 30px;
-  }
+  border-radius: 10px;
+  width: 82%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(1, 1, 1, 0.6);
+}
 
   </style>
   
