--- a/wallpaper.html
+++ b/wallpaper.html
@@ -9,6 +9,51 @@
                 height: 150px;
                 width: 150px;
             }
+            body{
+    background-image: url(0295690b06d598ca4af51229b07610b8.png);
+    background-size: 1950px;
+    background-repeat: no-repeat;
+}
+ul {
+    list-style-type: none;
+    margin: 50;
+    padding: 50;
+  }
+  ul {
+    list-style-type: none;
+    margin: 10;
+    padding: 10;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    text-size-adjust: 500px;
+    padding: 16px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+h1{
+    text-align: center;
+    font-size: 60px;
+    color: red;
+    font-family: cursive, Lucida Handwriting, sans-serif;
+}
+p{
+    font-size: 30px;
+    color: red;
+    font-family: cursive, Lucida Handwriting, sans-serif;
+}
         </style>
     </head>
     <body>
