--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ a {
       <h1> Anime Point melhor site de animes</h1>
       <ul>
         <li><a href="wallpaper.html">Wallpapers</a></li>
-        <li><a href="Lista de animes.html">Animes</a></li>
+        <li><a href="animes.html">Animes</a></li>
       </ul>
     </header>
 
